# snake2

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
src/: main.cpp  snake.cpp  snake.h
